<resources>
    <string name="app_name">ConfiguradorPedidos</string>
    <string name="msg_titulo">Configurador de Pedidos</string>
    <string name="btn_nuevo_pedido">Nuevo Pedido</string>
    <string name="msg_titulo_seleccion">Selecciona tu comida</string>
    <string name="pizza">Pizza</string>
    <string name="hamburguesa">Hamburguesa</string>
    <string name="ensalada">Ensalada</string>
    <string name="btn_siguiente">Siguiente</string>
    <string name="msg_titulo_seleccion_extras">Selecciona los extras</string>
    <string name="bebida">Bebida</string>
    <string name="papas_fritas">Papas fritas</string>
    <string name="postre">Postre</string>
    <string name="msg_titulo_resumen">Resumen del Pedido</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="btn_editar">Editar</string>
</resources>